# turboquant-vllm

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  ROADMAP.md  index.md  pr-38531-body.md  pr-38531-tech-spec.md  project-overview.md  sglang-files-tech-spec.md
docs/site/usage/: container.md  huggingface.md  vllm.md
docs/superpowers/plans/: 2026-04-13-gemma4-head-dim-support.md
experiments/: experiment_013_fp32_eager_baseline.py
experiments/logs/: experiment-004-tq4-nibble-vram.json  experiment-004-tq4-nibble-vram.md  experiment-013-fp32-eager-baseline.json  experiment-014-tq4-8b-20s.json  experiment-014-tq4-8b-30s.json  experiment-014-vllm-baseline-5s-2min.json  experiment-014-vllm-tq4-19s-2min.json
scripts/: smoke_test_file_uploads.py  smoke_test_gpu.py  smoke_test_scope.py  vllm-files-patch.Dockerfile  vllm-files-review-fixes.Dockerfile
src/turboquant_consumer/triton/: __init__.py  tq4_decompress.py
src/turboquant_consumer/vllm/: tq4_backend.py
src/turboquant_vllm/: __init__.py  benchmark.py  kv_cache.py  verify.py
src/turboquant_vllm/triton/: fused_paged_tq4_attention.py  tq4_compress.py  tq4_decompress.py
src/turboquant_vllm/vllm/: __init__.py  tq4_backend.py
tests/: conftest.py  test_autotune_bucket.py  test_compressors.py  test_flash_attention.py  test_flash_attention_tq4.py  test_flash_attention_tq4_kv.py  test_gemma4_head_dim.py  test_kv_cache.py  test_kv_cache_core.py  test_kv_cache_hetero.py  test_kv_cache_regression.py  test_lloyd_max.py  test_model_regression.py  test_per_layer_cosine.py  test_prefill_guard.py  test_quantizer.py  test_thinking_routing.py  test_tq4_out_parameter.py  test_triton_multi_dim.py  test_verify.py  test_vllm_cache.py  test_vllm_registration.py  test_vllm_triton_equivalence.py
