[project]
name = "turboquant-vllm"
version = "1.4.0"
description = "TurboQuant KV cache compression for vLLM — fused Triton kernels, 3.76x compression, 3.7x faster decode on RTX 4090"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Alberto-Codes" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "torchvision>=0.21",
    "transformers>=4.57",
    "molmo-utils>=0.0.1",
    "scipy>=1.10",
    "accelerate>=0.25",
    "einops>=0.8",
]
keywords = [
    "ai",
    "quantization",
    "turboquant",
    "kv-cache",
    "inference-optimization",
    "vllm",
    "triton",
    "vision-language-model",
    "molmo",
    "consumer-gpu",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Alberto-Codes/turboquant-vllm"
Repository = "https://github.com/Alberto-Codes/turboquant-vllm"
Issues = "https://github.com/Alberto-Codes/turboquant-vllm/issues"

[project.optional-dependencies]
bnb = [
    "bitsandbytes>=0.49.2",
]
vllm = [
    "vllm>=0.18",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6",
    "mkdocs-gen-files>=0.6",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=1.0",
]

[project.entry-points."vllm.general_plugins"]
tq4_backend = "turboquant_vllm.vllm:register_tq4_backend"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

# --------------------------------------------------------------------------- #
# import-linter
# --------------------------------------------------------------------------- #
[tool.importlinter]
root_package = "turboquant_vllm"

[[tool.importlinter.contracts]]
name = "Core module layers"
type = "layers"
layers = [
    "turboquant_vllm.benchmark",
    "turboquant_vllm.kv_cache",
    "turboquant_vllm.compressors",
    "turboquant_vllm.quantizer",
    "turboquant_vllm.lloyd_max",
]

[[tool.importlinter.contracts]]
name = "Triton must not import kv_cache"
type = "forbidden"
source_modules = ["turboquant_vllm.triton"]
forbidden_modules = ["turboquant_vllm.kv_cache", "turboquant_vllm.benchmark"]
ignore_imports = [
    # TYPE_CHECKING-only import for type hints, not runtime
    "turboquant_vllm.triton.attention_interface -> turboquant_vllm.kv_cache",
]

[[tool.importlinter.contracts]]
name = "vLLM must not leak into core or triton"
type = "forbidden"
source_modules = [
    "turboquant_vllm.lloyd_max",
    "turboquant_vllm.quantizer",
    "turboquant_vllm.compressors",
    "turboquant_vllm.kv_cache",
    "turboquant_vllm.triton",
]
forbidden_modules = ["turboquant_vllm.vllm"]

# --------------------------------------------------------------------------- #
# ruff
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
extend-select = ["E501", "I", "D"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D100", "D101", "D102", "D103", "D104"]
"scripts/**/*.py" = ["D100", "D103", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["turboquant_vllm"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.docvet]
fail-on = ["enrichment", "freshness", "coverage", "griffe", "presence"]
extend-exclude = ["scripts/", "src/turboquant_vllm/vllm/", "experiments/"]

[tool.docvet.enrichment]
require-init-params = true
require-return-type = true
check-extra-raises = true

[tool.docvet.presence]
min-coverage = 100.0

[tool.ty.src]
include = ["src", "tests"]
exclude = ["experiments"]

[[tool.ty.overrides]]
include = ["src/turboquant_vllm/vllm/**", "tests/test_vllm_*.py"]
rules.unknown-argument = "ignore"
analysis.replace-imports-with-any = ["vllm.**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "gpu: GPU tests (require CUDA, run inside ROCm container for AMD)",
    "benchmark: Benchmark tests (require GPU)",
    "slow: Slow-running tests",
]
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]

[tool.coverage.run]
source = ["turboquant_vllm"]
omit = [
    "src/turboquant_vllm/benchmark.py",
    "src/turboquant_vllm/verify.py",
    "src/turboquant_vllm/triton/*",
    "src/turboquant_vllm/vllm/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.uv-secure.vulnerability_criteria]
ignore_vulnerabilities = [
    "GHSA-5239-wwwm-4pmq",  # Pygments 2.19.1 — ReDoS in AdlLexer. No fix available.
    "GHSA-w8v5-vhqr-4h9v",  # diskcache 5.6.3 — transitive via vllm. No fix available.
]
allow_unused_ignores = false

[dependency-groups]
dev = [
    "docvet[griffe]>=1.13.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",
    "pytest-mock>=3.15",
    "pytest-randomly>=4.0",
    "ruff>=0.15",
    "ty>=0.0.1a33",
    "import-linter>=2.11",
    "uv-secure>=0.17.0",
]
